namespace CrcChecker.Optimized
{
    class CrcWork
    {
        public string Filename { get; set; }
        public byte[] Buffer { get; set; }
    }
}
